# neural-net

./: .Rprofile  .gitignore  .lintr  .rustfmt.toml  Cargo.toml  math.R
src/: inferrable_model.rs  lib.rs  main.rs  math.rs  serializable_model.rs  serialization.rs  stats.rs  training.rs  validate.rs
src/gui/: drawing_area_ui.rs  mod.rs  window.rs
