[package]
name = "neural-net"
version = "0.1.0"
edition = "2024"

[dependencies]
ndarray = { version = "0.16.1", features = ["serde-1"] }
ndarray-rand = "0.15.0"
mnist = "0.6.0"
rand = "0.9.2"
clap = { version = "4.5.46", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
safetensors = "0.6.2"
indicatif = "0.18.0"

